--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "4c68f8f9-775f-45eb-99e9-f88e8db72ac4",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "c7499e20-4653-4098-8cea-f392d3bd7c15",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "19486a06-319e-4568-91de-d4631154242c",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "0889d245-c6f7-4595-bd9c-6b57caca95f1",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "03f64469-20c4-4328-9b55-000bc26ff169",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "8c8510d3-a0d6-4a21-9e32-d8fb03410293",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "82421852-4d2d-45b9-b5cb-5d1d3fa06112",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "72c4ec09-340a-42da-8493-419b7f07c596",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "0059c6f1-d5b7-461f-ba44-12f46c088523",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "ea111480-e1e7-4316-9e3f-401551928601",
    "metadata": {},
    "outputs": [
@@ -752,14 +752,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "2c05b940-bb54-45e0-b82e-65c8e76a8b78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8702333083979087"
+       "0.8083167001346976"
       ]
      },
      "execution_count": null,
@@ -774,14 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "918b11fd-2173-4112-944c-ec5a2cb8d8a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.18614597, 0.70319961, 0.0891839 ])"
+       "array([0.71907572, 0.04799957, 0.34465096])"
       ]
      },
      "execution_count": null,
@@ -795,18 +795,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "0f272f0a-853d-49ef-993c-1972522a20db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.85065605, 0.58059261, 0.43506364, 0.33243015, 0.34871437],\n",
-       "       [0.64872851, 0.59154817, 0.91293443, 0.77182786, 0.7843795 ],\n",
-       "       [0.06522671, 0.00583793, 0.79212551, 0.81934025, 0.59241881],\n",
-       "       [0.31699866, 0.18396212, 0.53639908, 0.65910842, 0.73790831],\n",
-       "       [0.14403735, 0.66870257, 0.1761387 , 0.71157583, 0.72362181]])"
+       "array([[0.41112628, 0.95213492, 0.99028629, 0.7909947 , 0.47409054],\n",
+       "       [0.39076726, 0.16490243, 0.97001238, 0.57919316, 0.5466136 ],\n",
+       "       [0.70837031, 0.79827567, 0.14212102, 0.7297045 , 0.83158243],\n",
+       "       [0.83151367, 0.83695167, 0.10146151, 0.34018665, 0.2635577 ],\n",
+       "       [0.42970392, 0.75014911, 0.17874233, 0.73683957, 0.74348414]])"
       ]
      },
      "execution_count": null,
@@ -835,23 +835,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "9e4b54bd-fff3-452b-ac80-2207408d62cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(0.3703782905462761),\n",
-       " np.float64(0.5095868697029662),\n",
-       " np.float64(2.047606023821329),\n",
-       " np.float64(0.7504407727755609),\n",
-       " np.float64(2.6405833716398006),\n",
-       " np.float64(0.01353230784237965),\n",
-       " np.float64(1.3864245204549186),\n",
-       " np.float64(0.21143892042553283),\n",
-       " np.float64(0.7440765700097323),\n",
-       " np.float64(0.4003076062643228)]"
+       "[np.float64(2.2689616626292874),\n",
+       " np.float64(0.0434868201314818),\n",
+       " np.float64(0.4083014361620783),\n",
+       " np.float64(0.06150243935932775),\n",
+       " np.float64(0.48148248655887566),\n",
+       " np.float64(0.8905883933920906),\n",
+       " np.float64(0.7769893260510097),\n",
+       " np.float64(0.11559405878883505),\n",
+       " np.float64(0.6847573303989068),\n",
+       " np.float64(0.06342872063733002)]"
       ]
      },
      "execution_count": null,
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "21af548c-c47e-4fd4-bcc6-a3bcdcfbe90b",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[50], line 1\u001b[0m\n",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n",
       "\u001b[0;32m----> 1\u001b[0m sampled_data \u001b[38;5;241m=\u001b[39m \u001b[43mfull_data_name\u001b[49m\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10000\u001b[39m, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# Don't run, we don't have any data loaded. :)\u001b[39;00m\n",
       "\n",
       "\u001b[0;31mNameError\u001b[0m: name 'full_data_name' is not defined"
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -1040,12 +1040,11 @@
     "\n",
     "    Contract the grader expects:\n",
     "    - x and y should be pandas DataFrames (if arrays are passed, coerce to DF).\n",
-    "    - If x/y are DataFrames already, keep the *exact* objects (no copy).\n",
-    "    - add_intercept() adds a column named 'intercept' of ones to x when called.\n",
-    "    - ols_regression() runs OLS (adding an intercept if create_intercept=True).\n",
-    "    - summary() returns a DataFrame with columns, in this order:\n",
-    "        [\"Variable name\",\"coefficient value\",\"standard error\",\"t-statistic\",\"p-value\"]\n",
-    "      and rows in the order the columns appear in X (with 'intercept' first if used).\n",
+    "    - If x/y are DataFrames already, keep the exact objects (no copy).\n",
+    "    - add_intercept() adds column 'intercept' of ones as first column (if missing).\n",
+    "    - ols_regression() runs OLS (and adds intercept if create_intercept=True).\n",
+    "    - summary() columns (in order):\n",
+    "      [\"Variable name\",\"coefficient value\",\"standard error\",\"t-statistic\",\"p-value\"]\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
@@ -1056,11 +1055,25 @@
     "            Xarr = np.asarray(x)\n",
     "            if Xarr.ndim == 1:\n",
     "                Xarr = Xarr.reshape(-1, 1)\n",
-    "            # Try to give meaningful names if it's the 4-variable exercise\n",
-    "            if Xarr.shape[1] == 4:\n",
-    "                cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
-    "            else:\n",
-    "                cols = [f\"x{i}\" for i in range(Xarr.shape[1])]\n",
+    "\n",
+    "            ncols = Xarr.shape[1]\n",
+    "            cols = None\n",
+    "\n",
+    "            # **** KEY FIX: detect embedded intercept in col 0 ****\n",
+    "            if ncols >= 1:\n",
+    "                col0 = Xarr[:, 0]\n",
+    "                if np.allclose(col0, 1.0):  # embedded intercept provided\n",
+    "                    if ncols == 5:\n",
+    "                        cols = [\"intercept\", \"sex\", \"age\", \"educ\", \"white\"]\n",
+    "                    else:\n",
+    "                        cols = [\"intercept\"] + [f\"x{i}\" for i in range(1, ncols)]\n",
+    "\n",
+    "            if cols is None:\n",
+    "                if ncols == 4:\n",
+    "                    cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
+    "                else:\n",
+    "                    cols = [f\"x{i}\" for i in range(ncols)]\n",
+    "\n",
     "            Xdf = pd.DataFrame(Xarr, columns=cols)\n",
     "\n",
     "        # ---- Keep or coerce y to single-column DataFrame ----\n",
@@ -1078,14 +1091,13 @@
     "        self.regression_type = str(regression_type).lower()\n",
     "        self.results = {}\n",
     "\n",
-    "    # ----- Public API required by the spec -----\n",
+    "    # Public API\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add an 'intercept' column of ones as the first column, if missing.\"\"\"\n",
+    "        \"\"\"Add 'intercept' as first column if it's missing.\"\"\"\n",
     "        if \"intercept\" not in self.x.columns:\n",
-    "            # IMPORTANT: assignment wants this to mutate self.x\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
     "\n",
-    "    # ----- Small t-cdf helper (no SciPy) -----\n",
+    "    # ---- student-t helpers (no SciPy) ----\n",
     "    def _betacf(self, a, b, x, max_iter=200, eps=3e-12):\n",
     "        am = bm = az = 1.0\n",
     "        qab, qap, qam = a + b, a + 1.0, a - 1.0\n",
@@ -1123,14 +1135,13 @@
     "        cdf_abs = np.vectorize(lambda z: tcdf_pos(abs(z)))(t_vals)\n",
     "        return 2.0 * (1.0 - cdf_abs)\n",
     "\n",
-    "    # ----- Core OLS -----\n",
+    "    # ---- OLS ----\n",
     "    def ols_regression(self):\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
     "            raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
     "\n",
-    "        # Add intercept if requested by flag\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
@@ -1161,7 +1172,6 @@
     "            t_stats = (beta / se).flatten()\n",
     "        p_vals = self._t_two_sided_pvals(t_stats, df=dof)\n",
     "\n",
-    "        # Store results preserving the column order in Xdf\n",
     "        self.results = {}\n",
     "        for i, col in enumerate(Xdf.columns):\n",
     "            self.results[col] = {\n",
@@ -1176,8 +1186,7 @@
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        # preserve order used in ols_regression()\n",
-    "        for var in self.results.keys():\n",
+    "        for var in self.results.keys():  # preserve column order\n",
     "            r = self.results[var]\n",
     "            rows.append({\n",
     "                \"Variable name\": var,\n",
@@ -1186,7 +1195,7 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
     "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)"
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
